corrected a bug for tabs display on mobile and added overflow-x-scroll

--- a/components/carousel/Carousel.module.scss
+++ b/components/carousel/Carousel.module.scss
@@ -2,6 +2,7 @@
 
 .carousel {
 	height: 100vh;
+	overflow: hidden;
 
 	.leftArrow {
 		position: absolute;
